feat: game selector dropdown, game-specific optimizations, forced UAC admin elevation